--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.4'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'com.google.cloud.tools.jib' version '3.3.1'
 }
 
 group = 'com.demo'
@@ -22,4 +23,13 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jib {
+	from {
+		image = "gcr.io/distroless/java17-debian11"
+	}
+	to {
+		image = String.format("%s:%s", System.getenv('IMAGE_NAME'), System.getenv('TAG'))
+	}
 }
